# dirtree

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TESTING.md  dirtree.py  dirtree_config.json  pyproject.toml
.github/workflows/: tests.yml
dirtree/: __init__.py  dirtree_cli.py  dirtree_config.py  dirtree_core.py  dirtree_filters.py  dirtree_interactive.py  dirtree_llm.py  dirtree_scanner.py  dirtree_styling.py  dirtree_utils.py
dirtree_lib/: __init__.py  dirtree_cli.py  dirtree_config.py  dirtree_core.py  dirtree_filters.py  dirtree_interactive.py  dirtree_llm.py  dirtree_scanner.py  dirtree_styling.py  dirtree_utils.py  readme.md
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_filtering_logic.py  test_llm_export.py  test_tree_generation.py
